syntax = "proto3";

package pb;

service SecKillService{
    rpc secKill(SecRequest) returns (SecResponse){}
}


message SecRequest {
    int64 ProductId = 1;
    string Source = 2;
    string AuthCode = 3;
    string SecTime = 4;
    string Nance = 5;
    int64 UserId = 6;
    string UserAuthSign = 7;
    int64 AccessTime = 8;
    string ClientAddr = 9;
    string ClientRefence = 10;
}

message SecResponse {
    int64 ProductId = 1;
    int64 UserId = 2;
    string Token = 3;
    int64 TokenTime = 4;
    int64 Code = 5;
}


